--- a/app/views/welcome/_contact_us.html.erb
+++ b/app/views/welcome/_contact_us.html.erb
@@ -9,41 +9,44 @@
         <h2 class="section-title mb-3"><%= t(:label_text_contact_form_title) %></h2>
         <p class="mb-5"><%= t(:text_contact_form_short_description) %></p>
 
-        <form method="post" data-aos="fade">
+        <div class="bm-5">
+          <ul id="feedback_info" class="info_block"></ul>
+        </div>
+
+        <%= form_with(model: @feedback, url: feedback_path, data: {aos: 'fade'}) do |f| %>
           <div class="form-group row">
             <div class="col-md-6 mb-3 mb-lg-0">
-              <input type="text" class="form-control" placeholder="<%= t(:label_text_contact_form_fname) %>">
+              <%= f.text_field :first_name, placeholder: t(:label_text_contact_form_fname),  class: 'form-control'  %>
             </div>
             <div class="col-md-6">
-              <input type="text" class="form-control" placeholder="<%= t(:label_text_contact_form_lname) %>">
+              <%= f.text_field :last_name, placeholder: t(:label_text_contact_form_lname), required: true,  class: 'form-control'  %>
             </div>
           </div>
 
           <div class="form-group row">
             <div class="col-md-12">
-              <input type="text" class="form-control" placeholder="<%= t(:label_text_contact_form_subject) %>">
+              <%= f.text_field :subject, placeholder: t(:label_text_contact_form_subject), required: true, class: 'form-control'  %>
             </div>
           </div>
 
           <div class="form-group row">
             <div class="col-md-12">
-              <input type="email" class="form-control" placeholder="<%= t(:label_text_contact_form_user_email) %>">
+              <%= f.email_field :email, placeholder: t(:label_text_contact_form_user_email), class: 'form-control'  %>
             </div>
           </div>
           <div class="form-group row">
             <div class="col-md-12">
-              <textarea class="form-control" id="" cols="30" rows="10" placeholder="<%= t(:label_text_contact_form_user_message) %>"></textarea>
+              <%= f.text_area :body, placeholder: t(:label_text_contact_form_user_message), cols: 30, rows: 10, required: true, class: 'form-control'  %>
             </div>
           </div>
 
           <div class="form-group row">
             <div class="col-md-6">
-
-              <input type="submit" class="btn btn-primary py-3 px-5 btn-block btn-pill" value="<%= t(:btn_text_contact_us_form_submit) %>">
+              <%= f.submit t(:btn_text_contact_us_form_submit), class: 'btn btn-primary py-3 px-5 btn-block btn-pill', remote: true %>
             </div>
           </div>
 
-        </form>
+        <% end %>
       </div>
     </div>
   </div>
