--- a/app/assets/stylesheets/landing/style.css
+++ b/app/assets/stylesheets/landing/style.css
@@ -1186,3 +1186,9 @@ h1, h2, h3, h4, h5,
     color: white;
     margin: 30% 30%;
 }
+
+@media only screen and (max-width: 600px) {
+    .intro_header {
+        margin-top: 100px;
+    }
+}
