--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,21 +23,27 @@
     <%=  stylesheet_link_tag 'landing/bootstrap-datepicker' %>
     <%=  stylesheet_link_tag 'landing/aos' %>
     <%=  stylesheet_link_tag 'landing/style' %>
+    <%=  stylesheet_link_tag 'main' %>
+    <%= javascript_include_tag 'las_utils'  %>
+
+    <script type="text/javascript" charset="utf-8">
+        LAS.Utils = (function(my) {
+            var my = my || {};
+
+            my.relative_url_root = '<%= relative_root_url %>';
+            return my;
+        })(LAS.Utils || {});
+    </script>
   </head>
 
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
-<!--  <p class="navbar-text pull-right">-->
-    <%# if user_signed_in? %>
-<!--      Logged in as <strong><%#= current_user.email %></strong>.-->
-<!--      <%#= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |-->
-      <%#= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-    <%# else %>
-<!--      <%#= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |-->
-      <%#= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-    <%# end %>
-<!--  </p>-->
-
+  <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+      </div>
+    </div>
+  </div>
 
   <%= yield %>
 
@@ -52,5 +58,7 @@
     <%= javascript_include_tag 'landing/jquery.fancybox.min'  %>
     <%= javascript_include_tag 'landing/jquery.sticky'  %>
     <%= javascript_include_tag 'landing/main'  %>
+    <%= javascript_include_tag 'ajax_buttons'  %>
+  <%=  %>
   </body>
 </html>
