--- a/app/views/welcome/_footer.html.erb
+++ b/app/views/welcome/_footer.html.erb
@@ -13,11 +13,11 @@
           <li><a href="#"><%= t(:text_news_link) %></a></li>
 
           <% if user_signed_in? %>
-            <li><%= link_to t(:text_link_page_profile), edit_user_registration_path, :class => 'navbar-link' %></li>
-            <li><%= link_to t(:text_logout), destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
+            <li><%= link_to t(:text_link_page_profile), edit_user_registration_path, class: 'navbar-link' %></li>
+            <li><%= link_to t(:text_logout), destroy_user_session_path, method: :delete, class: 'navbar-link'  %></li>
           <% else %>
-            <li><%= link_to t(:text_sign_up), new_user_registration_path, :class => 'navbar-link'  %></li>
-            <li><%= link_to t(:text_login), new_user_session_path, :class => 'navbar-link'  %></li>
+            <li><%= link_to t(:text_sign_up), new_user_registration_path, class: 'navbar-link', data: {toggle: 'modal', target: '#modal-window'}, remote: true  %></li>
+            <li><%= link_to t(:text_login), new_user_session_path, class: 'navbar-link', data: {toggle: 'modal', target: '#modal-window'}, remote: true %></li>
           <% end %>
         </ul>
       </div>
