--- a/app/views/welcome/_navbar.html.erb
+++ b/app/views/welcome/_navbar.html.erb
@@ -29,7 +29,9 @@
       <div class="ml-auto w-25">
         <nav class="site-navigation position-relative text-right" role="navigation">
           <ul class="site-menu main-menu site-menu-dark js-clone-nav mr-auto d-none d-lg-block m-0 p-0">
-            <li class="cta"><%= link_to "<span>#{t(:text_link_page_profile)}</span>".html_safe, edit_user_registration_path, class: "nav-link"  %></li>
+            <% if user_signed_in? %>
+              <li class="cta"><%= link_to "<span>#{t(:text_link_page_profile)}</span>".html_safe, edit_user_registration_path, class: "nav-link"  %></li>
+            <% end %>
           </ul>
         </nav>
         <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right"><span class="icon-menu h3"></span></a>
