--- a/app/views/welcome/_reviews.html.erb
+++ b/app/views/welcome/_reviews.html.erb
@@ -1,5 +1,5 @@
 <div id="reviews_section" class="site-section bg-image overlay" style="background-image: url('<%= image_url "hero_1.jpg" %>');">
-  <div class="container">
+  <div class="container owl-container">
     <div class="row justify-content-center align-items-center owl-carousel">
 
       <div class="col-md-12 text-center testimony slide-carousel">
@@ -33,6 +33,9 @@
     </div>
   </div>
 </div>
+
+
+<!--TODO: Fix it-->
 
 <div class="site-section pb-0">
 
@@ -89,7 +92,7 @@
 
 
       </div>
-      <div class="col-lg-7 align-self-end"  data-aos="fade-left" data-aos-delay="200">
+      <div class="col-lg-7 align-self-end"  >
         <%= image_tag("person_transparent.png", alt: "Image", class: 'img-fluid') %>
       </div>
     </div>
