fix mobile reviews

--- a/app/views/welcome/_reviews.html.erb
+++ b/app/views/welcome/_reviews.html.erb
@@ -34,9 +34,6 @@
   </div>
 </div>
 
-
-<!--TODO: Fix it-->
-
 <div class="site-section pb-0">
 
   <div class="future-blobs">
@@ -92,7 +89,7 @@
 
 
       </div>
-      <div class="col-lg-7 align-self-end"  >
+      <div class="col-lg-7 align-self-end"  data-aos="fade-bottom" data-aos-delay="200">
         <%= image_tag("person_transparent.png", alt: "Image", class: 'img-fluid') %>
       </div>
     </div>
